<resources>
    <string name="app_name">LIVisitor</string>
    <string name="linkedin_logo">LinkedIn Logo</string>
    <string name="label_username">User name</string>
    <string name="label_password">Password</string>
    <string name="button_login">Log In</string>
    <string name="login_result_ok">Credentials OK</string>
    <string name="login_result_ko">Credentials wrong</string>
    <string name="title_activity_notes">Notes</string>
</resources>